2026-09-08-networkpolicy-default-deny/02-frontend-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: netpol-demo
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: curlimages/curl:latest
      command: ["sleep", "3600"]
      resources:
        requests:
          cpu: "10m"
          memory: "16Mi"
        limits:
          cpu: "50m"
          memory: "32Mi"
